# HFC_WLC

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  smoke_test.py
.github/workflows/: ci.yml
app/: __init__.py  application.py  main.py
app/static/: style.css
app/static/images/: README.md
app/templates/: base.html  concrete_review.html  concrete_step.html  review.html  wizard_step1.html  wizard_step2.html  wizard_step3.html
tests/: __init__.py  conftest.py  test_api.py  test_asce7.py  test_concrete.py  test_engine.py  test_new_features.py  test_report.py  test_risk.py  test_schemas.py  test_tables.py  test_tier_features.py
tests/golden_cases/: basic_fence.json  high_wind.json
web-ui/: README.md
windcalc/: __init__.py  api.py  asce7.py  cli.py  concrete.py  engine.py  footing.py  post_catalog.py  quantities.py  report.py  risk.py  schemas.py  settings.py  tables.py  wind_speed_lookup.py
windcalc/data/WLC Tables/: TEMPLATE_README.txt
